manifests/applications/stump/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: stump
  name: stump
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stump
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: stump
    spec:
      containers:
      - image: aaronleopold/stump:nightly
        imagePullPolicy: Always
        name: stump
        ports:
        - containerPort: 10801
        resources: {}
        volumeMounts:
        - name: stump-cfg
          mountPath: /config
        - name: stump-media
          mountPath: /data

      volumes:
      - name: stump-cfg
        persistentVolumeClaim:
          claimName: stump-cfg
      - name: stump-media
        nfs:
          path: /stump
          server: nfs-server.nfs-server.svc.cluster.local
status: {}
