manifests/applications/stump/svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: stump
  name: stump
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 10801
  selector:
    app: stump
status:
  loadBalancer: {}
